package Diadoc.Api.Proto;

option java_outer_classname = "AsyncMethodResultProtos";

message AsyncMethodResult {
	optional string TaskId = 1;
}